@@ -1,4 +1,6 @@
 2002-11-04  Max Horn  <max@quendi.de>
+	* menulist.cc: do not swallow certain command combos (Cmd-Q, Alt-X, ...) when
+	  nothing is selected
 	* exult.cc, game.cc, file/utils.*: Added and make use of clone_system_path()
 
 2002-11-03  Max Horn  <max@quendi.de>
